<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".tutorials.drawing_contant">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:background="@color/sree"
        android:minHeight="55dp"
        app:subtitleTextColor="@color/white"
        app:titleTextColor="@color/white">

    </androidx.appcompat.widget.Toolbar>

    <Button

        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="center"


        android:layout_marginLeft="5dp"


        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/where"
        android:fontFamily="@font/arial"


        android:text="@string/tutorials_drawing_content"

        android:textAlignment="center"
        android:textColor="@color/Red"

        android:textSize="15sp" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"

        android:layout_marginLeft="10dp"
        android:layout_marginTop="-2dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/shado"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <Button
                android:id="@+id/points"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/feature_btn2"
                android:contextClickable="true"
                android:fontFamily="@font/arial"
                android:shadowColor="#00CCCCCC"
                android:text="@string/projections_of_points"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="17sp"


                />

            <Button
                android:id="@+id/lines"
                android:layout_width="match_parent"

                android:layout_height="75dp"
                android:layout_gravity="center"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"

                android:background="@drawable/feature_btn2"


                android:elevation="17sp"
                android:fontFamily="@font/arial"
                android:shadowColor="#00CCCCCC"
                android:text="@string/projections_of_lines"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="17sp"

                />


            <Button
                android:id="@+id/solids"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/feature_btn2"
                android:elevation="20dp"
                android:fontFamily="@font/arial"
                android:text="@string/projections_of_solids"
                android:textAlignment="center"
                android:textAllCaps="true"

                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/dep_surfaces"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/feature_btn2"
                android:elevation="20dp"
                android:fontFamily="@font/arial"
                android:text="@string/developments_of_surfaces"
                android:textAlignment="center"
                android:textAllCaps="true"

                android:textColor="@color/white"
                android:textSize="17sp" />

            <Button
                android:id="@+id/iso_projections"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/feature_btn2"
                android:fontFamily="@font/arial"
                android:text="@string/isometric_projections"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"


                android:textSize="17sp" />

            <Button
                android:id="@+id/orth_projections"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/feature_btn2"
                android:fontFamily="@font/arial"
                android:text="@string/orthographic_projections"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"


                android:textSize="17sp" />

            <Button
                android:id="@+id/cycloidal"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/feature_btn2"
                android:fontFamily="@font/arial"
                android:text="@string/cycloidal_curves"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"


                android:textSize="17sp" />

            <Button
                android:id="@+id/involute"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/feature_btn2"
                android:fontFamily="@font/arial"
                android:text="@string/involute"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"


                android:textSize="17sp" />

            <Button
                android:id="@+id/conic"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="2dp"
                android:background="@drawable/feature_btn2"
                android:fontFamily="@font/arial"
                android:text="@string/conic_section_curves"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>










